# OpenCV_learning_notes

./: .gitignore  README.md
OpenCV_blog/Basic_operation_for_image/: CMakeLists.txt  canny.cpp  common_data.cpp  erosion.cpp  image_binary.cpp  image_init.cpp  mean_filter.cpp
OpenCV_blog/Hough_transform/: CMakeLists.txt  Hough_circle_transform.cpp  Hough_lines.cpp
OpenCV_blog/corner_detection/: CMakeLists.txt  Harris_corner_detection.cpp  Shi-Tomashi_detection.cpp
OpenCV_blog/edge_detection/: CMakeLists.txt  edge_detection.cpp
OpenCV_blog/image_affine/: CMakeLists.txt  image_resize.cpp
OpenCV_blog/image_filter/: CMakeLists.txt  erosion_dilate.cpp  filter.cpp
OpenCV_blog/image_inpaint/: CMakeLists.txt  image_repairing.cpp
OpenCV_blog/mask/: CMakeLists.txt  mask.cpp
OpenCV_blog/remap_and_affine/: CMakeLists.txt  affine.cpp  remap.cpp  rotate_image.cpp
OpenCV_blog/template_match/: CMakeLists.txt  template_matching.cpp
Section 10/face_detection/: CMakeLists.txt  face_detection.cpp
Section 10/image_classification/: CMakeLists.txt  image_classification_caffe.cpp  image_classification_tensorflow.cpp
Section 10/image_classification/data/models/: DOWNLOAD_FILES.txt
Section 10/object_detection/: CMakeLists.txt  object_detection.cpp  object_detection_yolo.cpp
Section 10/pose_assessment/: CMakeLists.txt  pose_assessment.cpp
Section 3/Video_input/: CMakeLists.txt  Output.avi  main.cpp
Section 3/mouse_move/: CMakeLists.txt  main.cpp
Section 3/track_bar/: CMakeLists.txt  main.cpp
Section 4/Blob/: CMakeLists.txt  main.cpp
Section 4/assignment/: main1.cpp
Section 4/assignment1/: CMakeLists.txt  main.cpp
Section 4/connect_component_analysis/: CMakeLists.txt  main.cpp
Section 4/contour/: CMakeLists.txt  main.cpp
Section 4/corrosion_expansion/: CMakeLists.txt  main.cpp
Section 4/open_close_algorithm/: CMakeLists.txt  main.cpp
Section 4/threshold/: CMakeLists.txt  main.cpp
Section 5/assignment/: CMakeLists.txt  main.cpp
Section 5/color_space/: CMakeLists.txt  main.cpp
Section 5/desaturate_image/: CMakeLists.txt  main.cpp
Section 5/eqhist/: CMakeLists.txt  main.cpp
Section 5/image_filter/: CMakeLists.txt  canny.cpp  convolution.cpp  gradient.cpp  image_blur.cpp
Section 6/: CMakeLists.txt  chroma_keying.cpp
Section 7/Homography_transformation/: CMakeLists.txt  main.cpp
Section 7/affine_transformation/: CMakeLists.txt  geo_transform.cpp
Section 7/application/: CMakeLists.txt  Panoramic_image.cpp  doc_alignment.cpp  find_object.cpp
Section 7/assignment/: CMakeLists.txt  assignment1.cpp  assignment2.cpp
Section 7/image_features/: CMakeLists.txt  main.cpp
Section 8/image_classification/: CMakeLists.txt  cropEyeRegion.h  main.cpp
Section 8/pedestrain_detect/: CMakeLists.txt  detectPedestrains.cpp  trainPedestrainDetector.cpp
Section 9/Lucas_Kanade/: CMakeLists.txt  LK.cpp
Section 9/Mean_shift/: CMakeLists.txt  cam_shift.cpp  mean_shift.cpp
Section 9/kalman_filter/: CMakeLists.txt  kalman_filter.cpp
Section 9/object_tracking/: CMakeLists.txt  multi_objects_tracking.cpp  single_object_tracking.cpp
Section 9/video_stable/: CMakeLists.txt  video_stable.cpp
final_coursework/documents_scanning/: CMakeLists.txt  text_correction.cpp
final_coursework/object_detection_and_tracking/: CMakeLists.txt  object_detection_and_tracking.cpp
final_coursework/skin_smooth_and_glasses/: CMakeLists.txt  skin_smooth1.cpp  skin_smooth1.hpp  skin_smooth_and_wear_glass.cpp
final_coursework/skin_smooth_and_glasses/face_detector/: opencv_face_detector.pbtxt  opencv_face_detector_uint8.pb
final_coursework/skin_smooth_and_glasses/models/: facial-landmarks-35-adas-0002.xml
